@@ -1,4 +1,5 @@
 0.19
+ - Fix check_array_required(). It's required.
 
 0.18 2023-08-21T19:15:45+02:00
  - Add check_array_required().
